--- a/demo2.html
+++ b/demo2.html
@@ -25,7 +25,7 @@
 	<body>
 		<div class="container">
 			<header>
-				<h1>最美的你<a href="end.html">(请点击，我有话要说)</a></h1>
+				<h1>最美的你<a href="end.html">(请点击,我有话要说)</a></h1>
 			</header>
 			<section>
 				<div class="one">
